# scc-hypervisor-collector

./: .gitignore  .venv-requirements.txt  README.md  requirements.txt  scc-hypervisor-collector.spec  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-workflow.yml  version-tagging.yml
.obs/: workflows.yml
container/: Dockerfile  README.md  _service.example  entrypoint.bash
doc/: Adhoc_Testing.md  Container_Deployment.md  OBS_Maintenance_Workflow.md  Security.md
doc/man/: Makefile  README.md  scc-hypervisor-collector.1  scc-hypervisor-collector.1.md  scc-hypervisor-collector.5  scc-hypervisor-collector.5.md  scc-hypervisor-collector.service.8  scc-hypervisor-collector.service.8.md
examples/: shc_cfg.yaml
examples/all_in_one/: shc_cfg.yaml
examples/creds_and_backends/: backends.yml  credentials.yml
examples/multiple_files/: libvirt.yml  vcenter.yml
packaging/: README.md  _service.example
src/scc_hypervisor_collector/: __init__.py
src/scc_hypervisor_collector/api/: __init__.py  config_manager.py  configuration.py  exceptions.py  gatherer.py  hypervisor_collector.py  scheduler.py  uploader.py  util.py
src/scc_hypervisor_collector/cli/: __init__.py
systemd/: scc-hypervisor-collector.service  scc-hypervisor-collector.timer
tests/: conftest.py  test_config_manager.py  utils.py
tests/unit/: test_config.py  test_exceptions.py  test_hypervisor_collector.py  test_scc_hypervisor_collector_cli.py  test_scheduler.py  test_uploader.py
tests/unit/data/collected/libvirt/: collector.results
tests/unit/data/config/conflicts/: backends.yaml  vmware.yaml
tests/unit/data/config/invalid/: invalid.yaml
tests/unit/data/config/lexorder/: first.yaml  second.yaml
tests/unit/data/config/mock/: config.yaml  mock_libvirt1.json  mock_libvirt2.json  mock_vcenter1.json
tests/unit/data/config/multiple/: backends_noids.yaml  libvirt.yml  scc.yml  vmware.yaml
(+8 files in other folders)
