[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[metadata]
license_file = LICENSE
version = attr: scc_hypervisor_collector.__version__

[bumpversion:file:src/scc_hypervisor_collector/__init__.py]

[check-manifest]
ignore =
	tox.ini
	*.spec
	*requirements.txt
	bin/**
	examples/**
	systemd/**
	tests/**

[tool:pytest]
norecursedirs = 
	.venv
	.eggs
	.git
	.tox
	bin
	systemd
testpaths = tests

[flake8]
exclude =
	.eggs
	.git
	.tox
	.venv
	bin
	systemd
	tests

[coverage:report]
fail_under = 90
