[bumpversion]
current_version = 0.0.3
commit = True
tag = True

[metadata]
license_file = LICENSE
version = attr: scc_hypervisor_collector.__version__

[bumpversion:file:src/scc_hypervisor_collector/__init__.py]

[check-manifest]
ignore = 
	tox.ini
	*.spec
	*requirements.txt
	.venv/**
	.vscode/**
	bin/**
	container/**
	doc/**
	examples/**
	systemd/**
	tests/**

[tool:pytest]
norecursedirs = 
	.venv
	.vscode
	.eggs
	.git
	.tox
	bin
	container
	doc
	systemd
testpaths = tests

[flake8]
exclude = 
	.eggs
	.git
	.tox
	.venv
	.vscode
	bin
	container
	doc
	systemd
	tests

[coverage:report]
fail_under = 90
