[bumpversion]
current_version = 0.0.5
commit = True
tag = False

[bumpversion:file:src/scc_hypervisor_collector/__init__.py]

[metadata]
license_file = LICENSE
version = attr: scc_hypervisor_collector.__version__

[check-manifest]
ignore = 
	tox.ini
	*.spec
	*requirements.txt
	.obs/**
	.venv/**
	.vscode/**
	bin/**
	container/**
	doc/**
	examples/**
	packaging/**
	systemd/**
	tests/**

[tool:pytest]
norecursedirs = 
	.venv
	.vscode
	.eggs
	.git
	.obs
	.tox
	bin
	container
	doc
	packaging
	systemd
testpaths = tests

[flake8]
exclude = 
	.eggs
	.git
	.obs
	.tox
	.venv
	.vscode
	bin
	container
	doc
	packaging
	systemd
	tests

[coverage:report]
fail_under = 90
